fix for MULE-634. Base64Decoder has changed its default returnClass to byte[] (was: String!) which let the test case succeed only because the implementation was wrong in the first place; fixed both.
git-svn-id: https://svn.codehaus.org/mule/trunk/mule@1609 bf997673-6b11-0410-b953-e057580c5b09